Make RenderViewContextMenuViews::GetBrowserAcceleratorProvider() work for GuestViews.

Thereby making F11 work for the PDF Viewer in the context menu.

BUG=674108

Review-Url: https://codereview.chromium.org/2720963002
Cr-Commit-Position: refs/heads/master@{#453750}

Former-commit-id: 6abab1a4e989e0675e2528750c381df3f6fb6287